--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,9 @@
 body {
     background-color: #F5F5F5;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
